--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-<meta name="google-site-verification" content="ERmt--L1j-I9dSmovhWT9cbUdWC6prgTRzhwX3qL1zU" />
+<meta name="google-site-verification" content="BWA7g4ILF4n-rdJ3Uf8W4dUAa9TrAXs68I4-NJTHMC8" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="title" content="What's the difference between notarization and apostille services?">
@@ -117,7 +117,7 @@
   <!-- Notary Role Section -->
   <div class="container section">
     <h2>The Role of the Notary Public in Both Services</h2>
-    <p>A <strong><a href="https://maps.app.goo.gl/GVCkxhPzBTMD9RfJ8">Notary public in Carson CA</a></strong> plays a vital role in notarization and is often the first step before obtaining an apostille. For instance, a document like a power of attorney may need to be notarized before it is eligible for apostille certification. Many people begin by seeking assistance from a notary public and then proceed with apostille services to complete the international validation.</p>
+    <p>A <strong><a href="https://robrt-parker1.github.io/everyone-live/">Notary public in Carson CA</a></strong> plays a vital role in notarization and is often the first step before obtaining an apostille. For instance, a document like a power of attorney may need to be notarized before it is eligible for apostille certification. Many people begin by seeking assistance from a notary public and then proceed with apostille services to complete the international validation.</p>
   </div>
 
   <!-- Carson CA Section -->
